# RustWordSearchGenerator

./: Cargo.toml
my-word/: Cargo.toml
my-word/src/: main.rs
wordsearch/: Cargo.toml
wordsearch/benches/: bench.rs
wordsearch/src/: lib.rs  mod.rs  wordsearch.rs
