[package]
name = "wordsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.2"
regex = "1.5.5"
rand = {version="0.8.5", features=["small_rng"]}
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false